Task Overflow solved

--- a/style.css
+++ b/style.css
@@ -333,7 +333,6 @@ height: 100%;
     /* height: auto; */
     width: 90%;
     height: auto;
-    min-height: 100px;
     /* overflow-y: scroll; */
     margin: 10px auto;
     border-radius: 15px;
